--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -224,8 +224,8 @@
     <string name="enable_notification_alarm_dialog">Pour que les rappels soient affichés comme des alarmes, activez cette option pour MedTimer dans le menu suivant</string>
     <string name="continuous">Continu</string>
     <string name="daily">Quotidien</string>
-    <string name="daily_from_to">Intervalle journalier de %1s à %2s</string>
-    <string name="continuous_from">Intervalle continu à partir de %1s</string>
+    <string name="daily_from_to">Intervalle journalier de %1$s à %2$s</string>
+    <string name="continuous_from">Intervalle continu à partir de %1$s</string>
     <string name="reminder_status">Statut du rappel</string>
     <string name="dosing_instructions">Instructions de dosage</string>
     <string name="interval_type">Type d\'intervalle</string>
