--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -219,8 +219,8 @@
     <string name="enable_notification_alarm_dialog">Om herinneringen als alarmen weer te geven, schakelt u dit in voor MedTimer in het volgende menu</string>
     <string name="continuous">Continu</string>
     <string name="daily">Dagelijks</string>
-    <string name="daily_from_to">Dagelijks interval van %1s tot %2s</string>
-    <string name="continuous_from">Continu interval vanaf %1s</string>
+    <string name="daily_from_to">Dagelijks interval van %1$s tot %2$s</string>
+    <string name="continuous_from">Continu interval vanaf %1$s</string>
     <string name="reminder_status">Herinneringsstatus</string>
     <string name="dosing_instructions">Doseringsinstructies</string>
     <string name="interval_type">Intervaltype</string>
