--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -226,8 +226,8 @@
     <string name="enable_notification_alarm_dialog">Чтобы разрешить отображение напоминаний в качестве будильников, включите эту функцию для MedTimer в следующем меню</string>
     <string name="continuous">Непрерывный</string>
     <string name="daily">Ежедневно</string>
-    <string name="daily_from_to">Ежедневный интервал от %1s до %2s</string>
-    <string name="continuous_from">Непрерывный интервал, начиная с %1s</string>
+    <string name="daily_from_to">Ежедневный интервал от %1$s до %2$s</string>
+    <string name="continuous_from">Непрерывный интервал, начиная с %1$s</string>
     <string name="reminder_status">Статус напоминания</string>
     <string name="dosing_instructions">Инструкции по дозированию</string>
     <string name="interval_type">Тип интервала</string>
